# NeMo

./: .directory  .gitignore  .gitmodules  CMakeLists.txt  README.md  cruft-removed.md
data/test_models/: slightly_bigger_example.json  test_core_0_spike.sqlite.db
docs/: Doxyfile
src/: CMakeLists.txt  dumpi.c  dumpi.h  globals.c  globals.h  mapping.c  mapping.h  message.c  message.h  nemo.main.c  nemo_config.h.in
src/IO/: energy_stats.c  energy_stats.h  model_reader.c  model_reader.h  neuron_output.c  neuron_output.h  output.c  output.h  spike_db_reader.c  spike_db_reader.h  spike_reader.h
src/layer_map/: layer_map_lib.c  layer_map_lib.h
src/neuro/: axon.c  axon.h  synapse.c  synapse.h  tn_neuron.c  tn_neuron.h  tn_neuron_struct.h
src/tests/: tomacs_exp.c  tomacs_exp.h
